openshift/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: content-curator
  labels:
    app: content-curator
