openshift/analytics.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: analytics
  namespace: sksharmar1-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: analytics
  template:
    metadata:
      labels:
        app: analytics
    spec:
      containers:
        - name: analytics
          image: image-registry.openshift-image-registry.svc:5000/sksharmar1-dev/analytics:latest
          ports:
            - containerPort: 8084
          readinessProbe:
            tcpSocket:
              port: 8084
            initialDelaySeconds: 40
            periodSeconds: 10
            failureThreshold: 15
          livenessProbe:
            tcpSocket:
              port: 8084
            initialDelaySeconds: 90
            periodSeconds: 30
            failureThreshold: 5
---
apiVersion: v1
kind: Service
metadata:
  name: analytics-service
  namespace: sksharmar1-dev
spec:
  selector:
    app: analytics
  ports:
    - port: 8084
      targetPort: 8084
