openshift/content-ingestion.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: content-ingestion
  namespace: sksharmar1-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: content-ingestion
  template:
    metadata:
      labels:
        app: content-ingestion
    spec:
      containers:
        - name: content-ingestion
          image: image-registry.openshift-image-registry.svc:5000/sksharmar1-dev/content-ingestion:latest
          ports:
            - containerPort: 8082
          readinessProbe:
            tcpSocket:
              port: 8082
            initialDelaySeconds: 40
            periodSeconds: 10
            failureThreshold: 15
          livenessProbe:
            tcpSocket:
              port: 8082
            initialDelaySeconds: 90
            periodSeconds: 30
            failureThreshold: 5
---
apiVersion: v1
kind: Service
metadata:
  name: content-ingestion-service
  namespace: sksharmar1-dev
spec:
  selector:
    app: content-ingestion
  ports:
    - port: 8082
      targetPort: 8082
