openshift/ml-service.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ml-service
  namespace: sksharmar1-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ml-service
  template:
    metadata:
      labels:
        app: ml-service
    spec:
      containers:
        - name: ml-service
          image: image-registry.openshift-image-registry.svc:5000/sksharmar1-dev/ml-service:latest
          ports:
            - containerPort: 5001
          readinessProbe:
            httpGet:
              path: /health
              port: 5001
            initialDelaySeconds: 15
            periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: ml-service
  namespace: sksharmar1-dev
spec:
  selector:
    app: ml-service
  ports:
    - port: 5001
      targetPort: 5001
