openshift/recommendation.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: recommendation
  namespace: sksharmar1-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: recommendation
  template:
    metadata:
      labels:
        app: recommendation
    spec:
      containers:
        - name: recommendation
          image: image-registry.openshift-image-registry.svc:5000/sksharmar1-dev/recommendation:latest
          ports:
            - containerPort: 8083
          readinessProbe:
            tcpSocket:
              port: 8083
            initialDelaySeconds: 40
            periodSeconds: 10
            failureThreshold: 15
          livenessProbe:
            tcpSocket:
              port: 8083
            initialDelaySeconds: 90
            periodSeconds: 30
            failureThreshold: 5
---
apiVersion: v1
kind: Service
metadata:
  name: recommendation-service
  namespace: sksharmar1-dev
spec:
  selector:
    app: recommendation
  ports:
    - port: 8083
      targetPort: 8083
